tests/dupe-type/out.txt
error: duplicate type: t
  ┌─ err.sml:1:18
  │
1 │ type t = int and t = string
  │                  ^

typechecking failed
